Day04/app2.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: app1-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: app2 
  template:
    metadata:
      labels: 
        app: app2
    spec:
      containers:
        - name: app2 
          image: varacontainers/app2-image:latest
          ports: 
           - containerPort: 80
---
apiVersion: v1 
kind: Service
metadata:
  name: app2-service # this service name will be referenced in the ingress yml file
spec:
  selector:
    app: app2
  ports:
    - port: 80
      targetPort: 80
