Day04/app3.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: app1-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: app3 
  template:
    metadata:
      labels: 
        app: app3
    spec:
      containers:
        - name: app3 
          image: varacontainers.app3-image:latest
          ports: 
           - containerPort: 80
---
apiVersion: v1 
kind: Service
metadata:
  name: app3-service # this service name will be referenced in the ingress yml file
spec:
  selector:
    app: app3
    ports:
      - port: 80
        targetPort: 80
